--- a/style.css
+++ b/style.css
@@ -80,3 +80,8 @@ button{
     color: rgb(225, 17, 21);
 }
 
+button:active{
+    background-color: #303c4a;
+    box-shadow: -8px -8px 15px rgba(91, 64, 64, 0.1);
+}
+
