--- a/style.css
+++ b/style.css
@@ -10,15 +10,18 @@
 body{
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    /* justify-content: center; */
     align-items: center;
     background: linear-gradient(45deg , #0a0a0a , #3a4452)
 }
 
 .calculator{
+    
     width: 300px;
     border: 1px solid #717377;
+    margin: auto;
+    margin-top: 100px;
     padding: 20px;
     border-radius: 15px;
     background: transparent;
@@ -85,3 +88,91 @@ button:active{
     box-shadow: -8px -8px 15px rgba(91, 64, 64, 0.1);
 }
 
+
+
+
+
+/* For github link url */
+#Profile{
+    margin-top: 70px;
+    margin-right: 35px;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.bn5 {
+    text-decoration: none;
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(227, 234, 226);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+  }
+  
+  .bn5:before {
+    content: "";
+    background: linear-gradient(
+      45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000
+    );
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowingbn5 20s linear infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+  }
+  
+  @keyframes glowingbn5 {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .bn5:active {
+    color: #000;
+  }
+  
+  .bn5:active:after {
+    background: transparent;
+  }
+  
+  .bn5:hover:before {
+    opacity: 1;
+  }
+  
+  .bn5:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #191919;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+  }
